--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -13,8 +13,8 @@
 {% block content %}
 <div class="container">
   <div class="row mb-5">
-    <div class="col-lg-6 col-md-12 mb-3">
-      <p class="display-4 text-success">건강한 당신을 <br class="d-none d-sm-block">또 보고 싶습니다, <br> See u Again</p>
+    <div class="col-lg-6 col-md-12 mb-4">
+      <p class="display-5 text-success">건강한 당신을 <br class="d-none d-sm-block">또 보고 싶습니다, <br> See u Again</p>
       <h2 class="font-weight-lighter">미래를 이끌어갈 코어 2030대,
         <br class="d-none d-sm-block">암 경험자가 마음 편히 치료 받고,
         <br class="d-none d-sm-block"> 살기 좋은 사회를 만들기 위해
@@ -22,7 +22,7 @@
 
     </div>
     <div class="col-lg-6 col-md-12">
-      <img src="../static/img/establish_kyca_1.png" class="img-fluid" style="width: 100%;">
+      <img src="../static/img/establish_1.jpg" class="img-fluid" style="width: 100%;">
     </div>
   </div>
 
@@ -79,7 +79,7 @@
 
   <div class="row mb-5">
     <div class="col-md-4 text-secondary">
-      <h3>한국청년암협회 <br>또봄 CI</h3>
+      <h3>한국청년암협회 <br>또봄 LOGO</h3>
       <h5>또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며,
         이를 이겨내어 새로운 봄, 사계절이 지나 다시 찾아오는 봄처럼 건강하고 행복한 모습을 의미하고 있습니다.</h5>
 
