--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -15,10 +15,10 @@
   <div class="row mb-5">
     <div class="col-lg-6 col-md-12 mb-4">
       <p class="display-5 text-success">건강한 당신을 <br class="d-none d-sm-block">또 보고 싶습니다, <br> See u Again</p>
-      <h2 class="font-weight-lighter">미래를 이끌어갈 코어 2030대,
-        <br class="d-none d-sm-block">암 경험자가 마음 편히 치료 받고,
-        <br class="d-none d-sm-block"> 살기 좋은 사회를 만들기 위해
-        <br class="d-none d-sm-block"><span class="text-success font-weight-bolder">KYCA또봄</span>이 함께 합니다</h2>
+      <h2 class="font-weight-lighter mb-1">미래를 이끌어갈 코어 2030대,
+        <br class="d-none d-sm-block mb-1">암 경험자가 마음 편히 치료 받고,
+        <br class="d-none d-sm-block mb-1"> 살기 좋은 사회를 만들기 위해
+        <br class="d-none d-sm-block mb-1"><span class="text-success font-weight-bolder">KYCA또봄</span>이 함께 합니다</h2>
 
     </div>
     <div class="col-lg-6 col-md-12">
