--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link href="/static/css/bootstrap-grid.css" rel="stylesheet">
+  
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
  
   
@@ -35,34 +35,30 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 </head>
+<body data-spy="scroll" data-target="#navbar-example" style="padding-top:0; padding-bottom: 0;">
+  <header style= background-color: #000;">
+      <div class="container">
+          <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
+                  class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img
+                      src="/static/img/logo_Reverse.png" alt="또봄 로고" style="width: 100%;"></a>
+              <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
+                  data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
+              <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                  <ul class="navbar-nav">
+                      <li class="nav-item"><a href="{% url 'establish' %}" class="nav-link">설립취지</a></li>
+                      <li class="nav-item"><a href="{% url 'business' %}" class="nav-link">사업소개</a></li>
+                      <li class="nav-item"><a href="{% url 'news' %}" class="nav-link">뉴스</a></li>
+                      <li class="nav-item"><a href="{% url 'event' %}" class="nav-link">이벤트</a></li>
+                      <li class="nav-item"><a href="{% url 'activity' %}" class="nav-link">활동 모습</a></li>
+                      <li class="nav-item"><a href="{% url 'scontent' %}" class="nav-link">소셜 컨텐츠</a></li>
+                      <li class="nav-item"><a href="{% url 'support' %}" class="nav-link">후원</a></li>
+                      <li class="nav-item"><a href="{% url 'map' %}" class="nav-link">오시는 길</a></li>
+                  </ul>
+              </div>
+          </nav>
+      </div>
+  </header>
 
-<body data-spy="scroll" data-target="#navbar-example">
-    <header>
-      <nav class="navbar">
-        <div class="content">
-          <div class="logo">
-            <a href="{% url 'home' %}">KYCA</a>
-          </div>
-          <ul class="menu-list">
-            <div class="icon cancel-btn">
-              <i class="fas fa-times"></i>
-            </div>
-            <li><a href="{% url 'home' %}">홈</a></li>
-            <li><a href="establish">설립취지</a></li>
-            <li><a href="business">사업소개</a></li>
-            <li><a href="news">뉴스</a></li>
-            <li><a href="event">이벤트</a></li>
-            <li><a href="activity">활동 모습</a></li>
-            <li><a href="scontent">소셜 컨텐츠</a></li>
-            <li><a href="support">후원</a></li>
-            <li><a href="map">오시는 길</a></li>
-          </ul>
-          <div class="icon menu-btn">
-            <i class="fas fa-bars"></i>
-          </div>
-        </div>
-      </nav>
-</header>
 <!-- header end -->
 
   <!-- Start Video Area -->
@@ -250,26 +246,13 @@
   <!--icons-->
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script src="/static/js/main.js"></script>
-  <!--nav-->
-  <script>
-    const body = document.querySelector("body");
-    const navbar = document.querySelector(".navbar");
-    const menuBtn = document.querySelector(".menu-btn");
-    const cancelBtn = document.querySelector(".cancel-btn");
-    menuBtn.onclick = ()=>{
-      navbar.classList.add("show");
-      menuBtn.classList.add("hide");
-      body.classList.add("disabled");
-    }
-    cancelBtn.onclick = ()=>{
-      body.classList.remove("disabled");
-      navbar.classList.remove("show");
-      menuBtn.classList.remove("hide");
-    }
-    window.onscroll = ()=>{
-      this.scrollY > 20 ? navbar.classList.add("sticky") : navbar.classList.remove("sticky");
-    }
-  </script>
+   <!--JavaScript-->
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+   crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+   integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+   crossorigin="anonymous"></script>
   
 </body>
 
