설립취지 로고와 문구 변경

--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -77,18 +77,14 @@
     </div>
   </div>
 
-  <div class="row mb-5">
-    <div class="col-md-4 text-secondary">
-      <h3>한국청년암협회 <br>또봄 LOGO</h3>
+  <div class="content">
+      <img src="/static/img/logo.png" alt="" class="img-fluid">
+  </div>
+  <br>
+  <div class="content mt-35">
       <h5>또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며,
         이를 이겨내어 새로운 봄, 사계절이 지나 다시 찾아오는 봄처럼 건강하고 행복한 모습을 의미하고 있습니다.</h5>
-
-    </div>
-
-    <div class="col-md-8 mb-4">
-      <img src="/static/img/img_about02.png" alt="" class="img-fluid">
-    </div>
-
+</div>
   </div>
   <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
         title="top"></a></div>
