--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -216,7 +216,7 @@
   <footer class="text-white text-center py-5 mt-3" style="background-color:black; margin-top: 0 !important; ">
     <div class="container">
       <p style="font-size:13px; color: #fff;">주소 : 서울특별시 강남구 테헤란로 2길 8, 4층 17호(역삼동, 마이워크 스페이스) “한국청년암협회 또봄”<br>
-        E-mail : iseeuagain17@gmail.com | 대표 : 이정훈
+        E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈
       </p>
       Copyright © 한국청년암협회 또봄 Corp. All rights reserved.
     </div>
