이벤트, 맵 정렬, 메인 헤더 패딩 수정
event.html 이랑 map.html에 row class=" justify-content-center" 추가했습니다.

main.css에서 .navbar {padding 25px 0;} 에서 padding: .5rem 1rem; 으로 변경했습니다.

--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -382,6 +382,9 @@ div#preloader {
   z-index: 1000;
 }
 
+..navbar-nav {
+  font-size: 16px;
+}
 .stick .navbar-header a.navbar-brand {
   display: inline-block;
   height: 90px;
