--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -4,7 +4,7 @@
 {%block content %}
 <div class="container">
     <h2 class="text-center">오시는 길</h1>
-        <div class="row" style="padding-top: 20px;">
+        <div class="row justify-content-center" style="padding-top: 20px;">
             <!--지도 시작-->
             <div class="col-sm-6 col-xs-12" style="max-width: 100%; padding-bottom: 30px;">
 
