--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -244,7 +244,7 @@ div#preloader {
   position: fixed;
   width: 100%;
   z-index: 2;
-  padding: 25px 0;
+  padding: .5rem 1rem;
   transition: all 0.3s ease;
   background: #1b1b1b;
   left: 0px;
