--- a/home/templates/event.html
+++ b/home/templates/event.html
@@ -3,7 +3,7 @@
 {% block content %}
     <!--Contents-->
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="mb-4">
                     <br>
