establish 윗부분 글자크기 조정

--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -12,13 +12,12 @@
 
 {% block content %}
 <div class="container">
-  <div class="row mb-5">
+  <div class="row mb-5 mt-5">
     <div class="col-lg-6 col-md-12 mb-4">
-      <p class="display-4 text-success">건강한 당신을 <br class="d-none d-sm-block">또 보고 싶습니다, <br> See u Again</p>
-      <h2 class="font-weight-lighter mb-1">미래를 이끌어갈 코어 2030대,
-        <br class="d-none d-sm-block mb-1">암 경험자가 마음 편히 치료 받고,
-        <br class="d-none d-sm-block mb-1"> 살기 좋은 사회를 만들기 위해
-        <br class="d-none d-sm-block mb-1"><span class="text-success font-weight-bolder">KYCA또봄</span>이 함께 합니다</h2>
+      <h1 class="text-success">건강한 당신을 <br class="d-none d-sm-block">또 보고 싶습니다.<br>See u Again!</h1>
+      <h5 class=" mb-1 pt-3">미래를 이끌어갈 코어 20-30대 암 경험자가
+        <br class="d-none d-sm-block mb-1">마음 편히 치료받고 살기 좋은 사회를 만들기 위해,
+        <br class="d-none d-sm-block mb-1"><span class="text-success font-weight-bolder">KYCA또봄</span>이 함께 합니다.</h5>
 
     </div>
     <div class="col-lg-6 col-md-12">
@@ -77,8 +76,8 @@
     </div>
   </div>
 
-   <h3 class="mb-5 ml-3">Logo</h3>
-   <div class="row lg-4">
+   <h3 class="mb-5">Logo</h3>
+   <div class="row lg-4 mb-5">
     <div class="col-md-6">
       <img src="/static/img/logo.png" alt="" class="img-fluid">
     </div>
@@ -89,7 +88,6 @@
   </div>
   
   </div>
-  <br><br>
   <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
         title="top"></a></div>
         
