헤더 푸터 살짝 수정
확인해보시고 이상하면 되돌리기 하세요

헤더 또봄 로고 하단의 영문이 잘 안보여서 이미지 크기를 키웠습니다. 근데 로고 이미지 화질이 별로라서 더 고화질로 변환해주셔야 할 것 같습니다..!?

활동모습, 소셜컨텐츠, 오시는길 페이지를 클릭하면 NAVBAR 위치가 다른페이지랑 다르게 변하는데 이유를 모르겠습니다. ㅠ

메인페이지는 로고 이미지는 변경시 다른 것들이 이상해져서 크기를 키우지 못했습니다 ㅠ

푸터에 있던 정보들은 오시는 길에 다 쓰여있는 정보들이라서(주소랑 메일 대표자 등등) 중복되는 내용은 삭제...하려다 일단 주석처리 했습니다.

그리고 sns 링크는 색깔을 파랑에서 흰색으로 바꿨습니다.

--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -239,7 +239,7 @@
 	</div>
 
 
-			<div class="icon_arrowup">
+			<div class="icon_arrowup" style="margin-bottom: 30px;">
 				<a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32" title="top"></a>
 			</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
