--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -88,7 +88,7 @@
   </div>
   
   </div>
-  <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
+  <div class="icon_arrowup" style="margin-bottom: 30px;"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
         title="top"></a></div>
         
 </div>
