--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -36,7 +36,7 @@
 
 </head>
 <body data-spy="scroll" data-target="#navbar-example" style="padding-top:0; padding-bottom: 0;">
-  <header style= background-color: #000;">
+  <header >
       <div class="container">
           <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
                   class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img
@@ -213,14 +213,14 @@
   <!-- End Support Area -->
 
   <!-- Start Footer bottom Area -->
-  <footer class="text-white text-center py-5 mt-3" style="background-color:black; margin-top: 0 !important; ">
+  <footer class="text-white text-center pt-5" style="background-color:black; margin-top: 0 !important; ">
     <div class="container">
-      <p style="font-size:13px; color: #fff;">주소 : 서울특별시 강남구 테헤란로 2길 8, 4층 17호(역삼동, 마이워크 스페이스) “한국청년암협회 또봄”<br>
-        E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈
-      </p>
-      Copyright © 한국청년암협회 또봄 Corp. All rights reserved.
+      <!-- <p style="font-size:12px; color:#aeaeae;">서울특별시 강남구 테헤란로 2길 8, 4층 17호 (역삼동, 마이워크 스페이스) <span style="color: #fff;">“한국청년암협회 또봄”</span><br>
+        E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p> -->
+      <p class="pb-5" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
     </div>
   </footer>
+
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
