--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -246,9 +246,11 @@ div#preloader {
   z-index: 2;
   padding: .5rem 1rem;
   transition: all 0.3s ease;
-  background: #1b1b1b;
   left: 0px;
-  font-size: 15px;
+  font-size: 16px;
+  margin-bottom: 20px;
+  background-color: #000;
+  border-radius:0;
 }
 
 
