--- a/home/templates/news.html
+++ b/home/templates/news.html
@@ -28,7 +28,7 @@
         </div>
         {% endfor %}
     </div>
-    <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
+    <div class="icon_arrowup" style="margin-bottom: 30px;"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
                 title="top"></a></div>
     
 </div>
