--- a/home/templates/scontent.html
+++ b/home/templates/scontent.html
@@ -159,7 +159,7 @@
 
 		</div>
 		<!-- /.row -->
-		<div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
+		<div class="icon_arrowup" style="margin-bottom: 30px;"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
 					title="top"></a></div>
 	</div>
 	<!-- /.container -->
