--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -7,8 +7,8 @@
         
             후원 하기</h3>
 
-    <div class="row" style="padding-top: 20px; margin-bottom: 60px;">
-                <div class="card col-lg-4  col-md-12" style="border: 0; padding: 0 25px 20px 25px;">
+    <div class="row justify-content-end" style="padding-top: 20px; margin-bottom: 60px;">
+                <div class="card col-lg-4 col-md-12" style="border: 0;">
                     <div class="card-header" id="headingOne">
                         <h5 class="mb-0 text-center">후원 절차
                         </h5>
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <!--//후원 절차-->
-                <div class="card col-lg-4  col-md-12" style="border: 0; padding: 0 25px 20px 25px;">
+                <div class="card col-lg-4 col-md-12" style="border: 0;">
                     <div class="card-header" id="headingTwo">
                         <h5 class="mb-0 text-center">후원금 사용처
                         </h5>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <!--//후원금 사용처-->
-                <div class="card col-lg-4  col-md-12" style="border: 0; padding: 0 25px 20px 25px;">
+                <div class="card col-lg-4  col-md-12" style="border: 0;">
                     <div class="card-header" id="headingThree">
                         <h5 class="mb-0 text-center">후원 계좌</h5>
                     </div>
