--- a/home/static/css/responsive.css
+++ b/home/static/css/responsive.css
@@ -4,18 +4,18 @@
   }
 
     /* nav-bar responsive */
-    .container nav.navbar-dark {
+    .container nav.navbar_po_a {
       position: relative;
     }
 
-    #collapsibleNavbar {
+    .navbar-right-1em {
       position: absolute;
       right: -1em;
       top: 0;
       height: 66px;
     }
 
-    #collapsibleNavbar ul li a.nav-link {
+    .nav_a_1em {
       padding: 0 1em;
     }
 
@@ -36,21 +36,22 @@
     line-height: 28px;
   }
 
-  /* nav-bar responsive */
-  .container nav.navbar-dark {
-    position:relative;
-  }
-  #collapsibleNavbar {
-    position:absolute;
-    right: -1em;
-    top:0;
-    height: 66px;
-  }
+ /* nav-bar responsive */
+ .container nav.navbar_po_a {
+   position: relative;
+ }
 
-  #collapsibleNavbar ul li a.nav-link{
-    padding: 0 1em;
-  }
-    /* end nav-bar responsive */
+ .navbar-right-1em {
+   position: absolute;
+   right: -1em;
+   top: 0;
+   height: 66px;
+ }
+  #collapsibleNavbar ul li a.nav-link {
+   padding: 0 1em;
+ }
+
+ /* end nav-bar responsive */
 }
 
 /* Tablet desktop :768px. */
