--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -59,12 +59,12 @@
 <body data-spy="scroll" data-target="#navbar-example" style="padding-top:0; padding-bottom: 0;">
     <header style="margin-bottom: 20px; background-color: #000;">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0; padding-left: 0; width: 100%;"> <a href="{% url 'home' %}"
+            <nav class="navbar navbar-expand-lg navbar-dark navbar_po_a" style="margin-top: 0; padding-left: 0; width: 100%;"> <a href="{% url 'home' %}"
                     class="navbar-brand" style="display: block; width: 192px; height: 50px; line-height: 50px; padding:0;"><img
                         src="/static/img/logo_Reverse.png" alt="또봄 로고" style="width: 100%;"></a>
                 <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">   
+                <div class="collapse navbar-collapse navbar-right-1em" id="collapsibleNavbar">   
                     <ul class="navbar-nav">
                         <li class="nav-item"><a href="{% url 'establish' %}" class="nav-link">설립취지</a></li>
                         <li class="nav-item"><a href="{% url 'business' %}" class="nav-link">사업소개</a></li>
