--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -109,7 +109,7 @@
                 <li class="list-inline-item"><a href="https:www.instagram.com/iseeuagain/" title="인스타그램"
                         target="blank" style="text-decoration: none; color: #fff;"><i class="fa fa-instagram"></i></a></li>
                 <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA"
-                        title="유튜브" target="blank" style="text-decoration: none; color: #fff;"><i class="fa fa-play"></i></a></li>
+                        title="유튜브" target="blank" style="text-decoration: none; color: #fff;"><i class="fa fa-youtube-play"></i></a></li>
         </ul>
       <p class="pb-4 mb-0" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
     </div>
