헤더 밝은색으로 교체

--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="container">
-  <div class="row mb-5 mt-5">
+  <div class="row mb-5 pt-5">
     <div class="col-lg-6 col-md-12 mb-4">
       <h1 class="text-success">건강한 당신을 <br class="d-none d-sm-block">또 보고 싶습니다.<br>See u Again!</h1>
       <h5 class=" mb-1 pt-3">미래를 이끌어갈 코어 20-30대 암 경험자가
