--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -249,7 +249,7 @@ div#preloader {
   left: 0px;
   font-size: 16px;
   margin-bottom: 20px;
-  background-color: #000;
+  background-color: #fff;
   border-radius:0;
 }
 
