--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -57,11 +57,11 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example" style="padding-top:0; padding-bottom: 0;">
-    <header style="margin-bottom: 20px; background-color: #000;">
+    <header style="margin-bottom: 20px; background-color: #fff; border-bottom: 1px solid #e5e5e5;">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark navbar_po_a" style="margin-top: 0; padding-left: 0; width: 100%;"> <a href="{% url 'home' %}"
+            <nav class="navbar navbar-expand-lg navbar-light font-weight-bold navbar_po_a" style="margin-top: 0; padding-left: 0; width: 100%;"> <a href="{% url 'home' %}"
                     class="navbar-brand" style="display: block; width: 192px; height: 50px; line-height: 50px; padding:0;"><img
-                        src="/static/img/logo_Reverse.png" alt="또봄 로고" style="width: 100%;"></a>
+                        src="/static/img/logo.png" alt="또봄 로고" style="width: 100%;"></a>
                 <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse navbar-right-1em" id="collapsibleNavbar">   
@@ -111,7 +111,8 @@
                 <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA"
                         title="유튜브" target="blank" style="text-decoration: none; color: #fff;"><i class="fa fa-youtube-play"></i></a></li>
         </ul>
-      <p class="pb-4 mb-0" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
+        <p class="mb-1" style="font-size:12px; color: #aeaeae;">E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p>
+        <p class="pb-4 mb-0" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
     </div>
   </footer>
     <!--//end footer area-->
