--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -36,11 +36,11 @@
 
 </head>
 <body data-spy="scroll" data-target="#navbar-example" style="padding-top:0; padding-bottom: 0;">
-  <header >
+  <header>
       <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
-                  class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img
-                      src="/static/img/logo_Reverse.png" alt="또봄 로고" style="width: 100%;"></a>
+          <nav class="navbar navbar-expand-lg navbar-light font-weight-bold" style="margin-top: 0; border-bottom: 1px solid #e5e5e5;"> <a href="{% url 'home' %}"
+                  class="navbar-brand" style="display: block; width: 222px; height: 50px; line-height: 50px; padding: 5px 0 0 30px; "><img
+                      src="/static/img/logo.png" alt="또봄 로고" style="width: 192px;"></a>
               <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                   data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -213,13 +213,21 @@
   <!-- End Support Area -->
 
   <!-- Start Footer bottom Area -->
-  <footer class="text-white text-center pt-5" style="background-color:black; margin-top: 0 !important; ">
+  <footer class="text-white text-center mt-3 pt-4" style="background-color:black; margin-top: 0 !important; ">
     <div class="container">
-      <!-- <p style="font-size:12px; color:#aeaeae;">서울특별시 강남구 테헤란로 2길 8, 4층 17호 (역삼동, 마이워크 스페이스) <span style="color: #fff;">“한국청년암협회 또봄”</span><br>
-        E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p> -->
-      <p class="pb-5" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
+        <p class="mb-0 mt-3" style="font-size:12px; color:#aeaeae;">본사: 서울특별시 강남구 테헤란로 2길 8, 4층 17호 (역삼동, 마이워크 스페이스) “한국청년암협회 또봄”</p>
+        <p class="mb-1" style="font-size:12px; color: #aeaeae;">E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p>
+        <p class="pb-4 mb-3" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
     </div>
   </footer>
+  
+  <!-- <footer class="text-white text-center pt-5" style="background-color:black; margin-top: 0 !important; ">
+    <div class="container">
+      <p style="font-size:12px; color:#aeaeae;">서울특별시 강남구 테헤란로 2길 8, 4층 17호 (역삼동, 마이워크 스페이스) <span style="color: #fff;">“한국청년암협회 또봄”</span><br>
+        E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p>
+      <p class="pb-5" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
+    </div>
+  </footer> -->
 
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
