--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -79,7 +79,7 @@
    <h3 class="mb-5">Logo</h3>
    <div class="row lg-4 mb-5">
     <div class="col-md-6">
-      <img src="/static/img/logo.png" alt="" class="img-fluid">
+      <img src="/static/img/img_about02.png" alt="" class="img-fluid">
     </div>
     <div class="col-lg-6 mt-35">
       <h5 class="pt-3">또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며,
