--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {%block content %}
-<div class="container pt-5">
+<div class="container pt-5" style="min-height: 80vh;">
     <h2 class="text-center">오시는 길</h1>
         <div class="row justify-content-center" style="padding-top: 20px;">
             <!--지도 시작-->
