--- a/home/templates/news.html
+++ b/home/templates/news.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container"  style="min-height: 80vh;">
     <div class="row">   
         {% for news in newslist %}
         <div class="col-md-4 mb-5">
