--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -105,11 +105,11 @@
     <div class="container">
         <ul class="list-unstyled list-inline social text-center">
                 <li class="list-inline-item"><a href="https:www.facebook.com/iseeua.page" title="페이스북" target="blank"><i
-                            class="fa fa-facebook" style="text-decoration: none; color: #fff;"></i></a></li>
+                            class="fa fa-facebook" style="color: #fff;"></i></a></li>
                 <li class="list-inline-item"><a href="https:www.instagram.com/iseeuagain/" title="인스타그램"
-                        target="blank" style="text-decoration: none; color: #fff;"><i class="fa fa-instagram"></i></a></li>
+                        target="blank" style="color: #fff;"><i class="fa fa-instagram"></i></a></li>
                 <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA"
-                        title="유튜브" target="blank" style="text-decoration: none; color: #fff;"><i class="fa fa-youtube-play"></i></a></li>
+                        title="유튜브" target="blank" style="color: #fff;"><i class="fa fa-youtube-play"></i></a></li>
         </ul>
         <p class="mb-1" style="font-size:12px; color: #aeaeae;">E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p>
         <p class="pb-4 mb-0" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
