--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -38,9 +38,9 @@
 <body data-spy="scroll" data-target="#navbar-example" style="padding-top:0; padding-bottom: 0;">
   <header>
       <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-light font-weight-bold" style="margin-top: 0; border-bottom: 1px solid #e5e5e5;"> <a href="{% url 'home' %}"
+          <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
                   class="navbar-brand" style="display: block; width: 222px; height: 50px; line-height: 50px; padding: 5px 0 0 30px; "><img
-                      src="/static/img/logo.png" alt="또봄 로고" style="width: 192px;"></a>
+                      src="/static/img/logo_Reverse.png" alt="또봄 로고" style="width: 192px;"></a>
               <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                   data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
