--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -85,7 +85,7 @@
     {% endblock %}
 
     <!-- Start Footer bottom Area -->
-    <!-- <footer class="text-white text-center py-5 mt-3" style="background-color:black;">
+    <footer class="text-white text-center py-5 mt-3" style="background-color:black;">
         <div class="container">
             <p style="font-size:13px">주소 : 서울특별시 강남구 테헤란로 2길 8, 4층 17호(역삼동, 마이워크 스페이스) “한국청년암협회 또봄”<br>
                 E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈
@@ -100,21 +100,8 @@
             </ul>
             Copyright © 한국청년암협회 또봄 Corp. All rights reserved.
         </div>
-    </footer> -->
-    <footer class="text-white text-center mt-3 pt-4" style="background-color:black; margin-top: 0 !important; ">
-    <div class="container">
-        <ul class="list-unstyled list-inline social text-center">
-                <li class="list-inline-item"><a href="https:www.facebook.com/iseeua.page" title="페이스북" target="blank"><i
-                            class="fa fa-facebook" style="color: #fff;"></i></a></li>
-                <li class="list-inline-item"><a href="https:www.instagram.com/iseeuagain/" title="인스타그램"
-                        target="blank" style="color: #aeaeae;"><i class="fa fa-instagram"></i></a></li>
-                <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA"
-                        title="유튜브" target="blank" style="color: #aeaeae;"><i class="fa fa-youtube-play"></i></a></li>
-        </ul>
-        <p class="mb-1" style="font-size:12px; color: #aeaeae;">E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p>
-        <p class="pb-4 mb-0" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
-    </div>
-  </footer>
+    </footer>
+    
     <!--//end footer area-->
 </body>
 
