--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -213,22 +213,13 @@
   <!-- End Support Area -->
 
   <!-- Start Footer bottom Area -->
-  <footer class="text-white text-center mt-3 pt-4" style="background-color:black; margin-top: 0 !important; ">
-    <div class="container">
-        <p class="mb-0 mt-3" style="font-size:12px; color:#aeaeae;">본사: 서울특별시 강남구 테헤란로 2길 8, 4층 17호 (역삼동, 마이워크 스페이스) “한국청년암협회 또봄”</p>
-        <p class="mb-1" style="font-size:12px; color: #aeaeae;">E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p>
-        <p class="pb-4 mb-3" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
-    </div>
-  </footer>
-  
-  <!-- <footer class="text-white text-center pt-5" style="background-color:black; margin-top: 0 !important; ">
+  <footer class="text-white text-center pt-5" style="background-color:black; margin-top: 0 !important; ">
     <div class="container">
       <p style="font-size:12px; color:#aeaeae;">서울특별시 강남구 테헤란로 2길 8, 4층 17호 (역삼동, 마이워크 스페이스) <span style="color: #fff;">“한국청년암협회 또봄”</span><br>
         E-mail : http://한국청년암협회또봄.com | 대표 : 이정훈</p>
       <p class="pb-5" style="font-size:12px; color: #aeaeae;">Copyright © 한국청년암협회 또봄 Corp. All rights reserved.</p>
     </div>
-  </footer> -->
-
+  </footer>
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
