--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -15,7 +15,6 @@
  
   
   <!-- Libraries CSS Files -->
-  <link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
   <link href="/static/lib/owlcarousel/owl.carousel.css" rel="stylesheet">
   <link href="/static/lib/owlcarousel/owl.transitions.css" rel="stylesheet">
@@ -39,7 +38,7 @@
   <header>
       <div class="container">
           <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
-                  class="navbar-brand" style="display: block; width: 222px; height: 50px; line-height: 50px; padding: 5px 0 0 30px; "><img
+                  class="navbar-brand"><img
                       src="/static/img/logo_Reverse.png" alt="또봄 로고" style="width: 192px;"></a>
               <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                   data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
